k8/bigsi-aggregator-service/bigsi-aggregator-api-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: bigsi-aggregator-api-deployment
  labels:
    app: bigsi-aggregator-api  
    tier: front    
spec:
  selector:
    matchLabels:
      app: bigsi-aggregator-api
  template:
    metadata:
      labels:
        app: bigsi-aggregator-api  
    spec:    
      containers:
      - name: bigsi-aggregator
        image: phelimb/bigsi-aggregator
        imagePullPolicy: Never
        command: ["/bin/sh"]
        args: ["-c","uwsgi --http :80  --harakiri 300  --buffer-size=65535  -w wsgi"]
        ports:
          - containerPort: 80
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: bigsi-aggregator-worker
  labels:
    app: bigsi-aggregator-worker     
spec:
  selector:
    matchLabels:
      app: bigsi-aggregator-worker
  template:
    metadata:
      labels:
        app: bigsi-aggregator-worker  
    spec:                
      containers:
      - name: bigsi-aggregator-worker
        image: phelimb/bigsi-aggregator
        imagePullPolicy: Never
        command: ["celery"]
        args: ["-A", "bigsi_aggregator.celery", "worker","--concurrency=1"]
---
apiVersion: v1
kind: Service
metadata:
  name: bigsi-aggregator-api-service
  labels:
    app: bigsi-aggregator-api
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80     
  selector:
    app: bigsi-aggregator-api
